@@ -34,5 +34,6 @@ The following options are recognized in the config passed to Grape:
 	<tr><td id="conf-xsl_directory">xsl_directory</td><td>Directory containing XSL files for PDF generation</td><td></td></tr>
 	<tr><td id="conf-fop">fop</td><td>Path to the Apache FOP binary (for generation of PDF files)</td><td></td></tr>
 	<tr><td id="conf-ps_bgworker">ps_bgworker</td><td>Path to ps_bgworker binary</td><td></td></tr>
+	<tr><td id="conf-cache_public_js_dirs">cache_public_js_dirs</td><td>If enabled, the compiled JS files from public directories will not be cached</td><td></td></tr>
 </table>
 </ps_doc>
